--- a/parola_palindroma/index.html
+++ b/parola_palindroma/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pali&Dispari</title>
+    <title>Parola Palindroma</title>
 </head>
 <body>
     
     <!-- SCRIPT -->
-    <script src="app.js"></script>
+    <script src="/parola_palindroma/app.js"></script>
 
 </body>
 </html>
